# mrext-ui

./: .gitignore  CMakeLists.txt  README.md
lib/cwalk/: cwalk.c
lib/fbg/fbdev/: fbg_fbdev.h
src/: console.c  console.h  input.c  input.h  scanners.c  scanners.h  screenshots.c
src/assets/: assets.c  assets.h  image_background.h  image_font.h
